<resources>
    <string name="app_name">Tienda Virtual</string>

    <string name="google_api_key">AIzaSyCqKrAvC7-hF1A8kdd9WS8bQbMnd6P_A4A</string>
    <string name="txt_bienvenida">Bienvenido(a)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="tipoVendedor">Vendedor</string>
    <string name="tipoCliente">Cliente</string>


    <!--NavigationDrawer Vendedor-->
    <string name="op_inicio_v">Inicio</string>
    <string name="op_mi_tienda_v">Mi Tienda</string>
    <string name="op_resenia_v">Reseñas</string>
    <string name="op_cerrer_sesion_v">Cerrar Sesion</string>

    <!--NavigationDrawer Cliente-->
    <string name="op_inicio_c">Inicio</string>
    <string name="op_mi_perfil_c">Mi Perfil</string>
    <string name="op_cerrer_sesion_c">Cerrar Sesion</string>

    <!--Botton Navigation Bar Cliente-->
    <string name="op_tienda_c">Tienda</string>
    <string name="op_mi_ordenes_c">Mis Ordenes</string>


    <!--Registro vendedor-->
    <string name="txtRegistroV">Registro de Vendedor</string>
    <string name="etNombreV">Nombre Completo</string>
    <string name="etEmailV">Email</string>
    <string name="etPasswordV">Password</string>
    <string name="etCPasswordV">Confirmar Password</string>
    <string name="btnregistrarV">Registrarme</string>

    <!--Registro cliente-->
    <string name="txtRegistroC">Registro de Cliente</string>
    <string name="etNombreC">Nombre Completo</string>
    <string name="btnregistrarC">Registrarme</string>

    <!--Login vendedor-->
    <string name="txtLoginV">Login de Vendedor</string>
    <string name="btnLogin">Ingresar</string>
    <string name="txtNoCuenta">¿No tienes Cuenta?</string>
    <string name="tvRegistrarV">Registrarme</string>

    <!--Login cliente-->
    <string name="txtLoginC">Login de Cliente</string>
    <string name="btnLoginC">Ingresar</string>
    <string name="txtNoCuentaC">¿No tienes Cuenta?</string>
    <string name="tvRegistrarC">Registrarme</string>

    <!--Perfil cliente-->
    <string name="txtMiPerfil">Mi Perfil</string>
    <string name="nombreCPerfil">Nombre completo</string>
    <string name="emailCPerfil">Email</string>
    <string name="dniCPerfil">Dni</string>
    <string name="telefonoCPerfil">Telefono</string>
    <string name="fechaRegistroCPerfil">Fecha de registro</string>
    <string name="btnGuardarInfoC">Guardar</string>
    <string name="ubicacionCPerfil">Ubicacion</string>
    <string name="btnAddUbicacion">Añadir Ubicacion</string>
    <string name="btnActualizar">Actualizar</string>

    <!--Mapa-->
    <string name="btnAddUbication">Añadir Ubicacion</string>


</resources>