<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vendedor.LoginVendedorActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLoginV"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/login_vendedor"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etEmail"
                android:hint="@string/etEmailV"
                android:drawableStart="@drawable/icono_email"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/etPassword"
                android:hint="@string/etPasswordV"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--BotonLogin-->
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin"
            android:id="@+id/btnLogin"
            android:textAllCaps="true"
            app:cornerRadius="8dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"/>

        <!--Pregunta-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNoCuenta"
            android:id="@+id/txtNoCuenta"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"/>

        <!--Boton login-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRegistrarV"
            android:id="@+id/tvRegistrarV"
            android:textStyle="bold"
            android:textColor="@color/celesteoscuro"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"/>





    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>