<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vendedor.RegistroVendedorActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/txtRegistroV"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/registro_vendedor"
            android:layout_width="80dp"
            android:layout_height="80dp"/>

        <!--Nombre Completo-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etNombreV"
                android:drawableStart="@drawable/icono_nombrecompleto"
                android:drawablePadding="8dp"
                android:layout_width="match_parent"
                android:inputType="text|textCapWords"
                android:hint="@string/etNombreV"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmail"
                android:drawableStart="@drawable/icono_email"
                android:drawablePadding="8dp"
                android:layout_width="match_parent"
                android:hint="@string/etEmailV"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etPassword"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="8dp"
                android:layout_width="match_parent"
                android:hint="@string/etPasswordV"
                android:inputType="textPassword"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Confirmar Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etCPassword"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="8dp"
                android:layout_width="match_parent"
                android:hint="@string/etCPasswordV"
                android:inputType="textPassword"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Registrar Vendedor-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnregistrarV"
            android:text="@string/btnregistrarV"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="8dp"
            android:textAllCaps="true">

        </com.google.android.material.button.MaterialButton>




    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>